--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "author": "Altinn",
   "license": "3-Clause BSD",
   "scripts": {
-    "lint": "eslint \"src/**/*.ts*\"",
-    "postinstall": "cd .. && husky install",
+    "postinstall": "husky install",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.development.js --mode development --progress",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.production.js --progress",
     "docker": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.docker.js --mode development --progress",
@@ -15,14 +14,31 @@
     "test:watchall": "jest --watchAll",
     "tsc": "tsc",
     "tsc:watch": "tsc --watch",
-    "clean": "rimraf dist compiled",
-    "webpack-watch": "cross-env NODE_ENV=development webpack --mode=development --config webpack.config.development.js --watch --progress"
+    "clean": "rimraf dist",
+    "webpack-watch": "cross-env NODE_ENV=development webpack --mode=development --config webpack.config.development.js --watch --progress",
+    "cy:open": "cypress open",
+    "cy:verify": "cypress verify",
+    "cy:version": "cypress -v",
+    "cy:cachelist": "cypress cache list",
+    "cy:run": "cypress run",
+    "cy:prunecache": "cypress cache prune",
+    "cy:delete:reports": "rimraf cypress/reports/* || true",
+    "cy:start:localtest": "node ./scripts/startLocaltest.mjs",
+    "cy:start:app": "node ./scripts/startApp.mjs",
+    "cy:before:appfrontend": "concurrently --kill-others --names localtest,app,frontend \"yarn cy:start:localtest\" \"yarn cy:start:app\" \"yarn start\"",
+    "cy:test:anonymous-stateless": "yarn run cy:delete:reports && cypress run -b chrome -s 'cypress/e2e/integration/app-anonymous-stateless/*.js'",
+    "cy:test:frontend": "yarn run cy:delete:reports && cypress run -b chrome -s 'cypress/e2e/integration/app-frontend/*.js'",
+    "cy:test:stateless": "yarn run cy:delete:reports && cypress run -b chrome -s 'cypress/e2e/integration/app-stateless/*.js'",
+    "cy:test:stateless-anonymous": "yarn run cy:delete:reports && cypress run -b chrome -s 'cypress/e2e/integration/app-stateless-anonymous/*.js'",
+    "cy:test:all": "yarn run cy:delete:reports && cypress run -b chrome -s 'cypress/e2e/integration/*/*.js'",
+    "cy:test:all:headless": "yarn run cy:delete:reports && cypress run -s 'cypress/e2e/integration/*/*.js'"
   },
   "devDependencies": {
     "@babel/core": "7.20.2",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
+    "@testing-library/cypress": "8.0.7",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
@@ -40,13 +56,20 @@
     "@typescript-eslint/eslint-plugin": "5.44.0",
     "@typescript-eslint/parser": "5.44.0",
     "altinn-designsystem": "3.1.0",
+    "axe-core": "4.5.2",
     "babel-jest": "29.3.1",
     "babel-loader": "9.1.0",
     "classnames": "2.3.2",
+    "concurrently": "7.6.0",
     "cross-env": "7.0.3",
     "css-loader": "6.7.2",
+    "cypress": "11.2.0",
+    "cypress-axe": "1.0.0",
+    "cypress-plugin-tab": "1.0.5",
+    "dotenv": "16.0.3",
     "eslint": "8.28.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-no-relative-import-paths": "1.5.0",
@@ -55,6 +78,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "8.0.0",
     "eslint-plugin-sonarjs": "0.16.0",
+    "execa": "6.1.0",
     "fork-ts-checker-notifier-webpack-plugin": "6.0.0",
     "fork-ts-checker-webpack-plugin": "7.2.13",
     "html-react-parser": "3.0.4",
@@ -78,6 +102,7 @@
     "resize-observer-polyfill": "1.5.1",
     "rimraf": "3.0.2",
     "source-map-loader": "4.0.1",
+    "start-server-and-test": "1.14.0",
     "style-loader": "3.3.1",
     "terser-webpack-plugin": "5.3.6",
     "ts-jest": "29.0.3",
