--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "testUtils": ["src/testUtils.tsx"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "test/cypress"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["node_modules", "cypress"],
 }
