--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:watchall": "jest --watchAll",
-    "tsc": "tsc",
+    "tsc": "tsc && cd cypress && tsc",
     "tsc:watch": "tsc --watch",
+    "lint": "eslint .",
     "clean": "rimraf dist",
     "webpack-watch": "cross-env NODE_ENV=development webpack --mode=development --config webpack.config.development.js --watch --progress",
     "cy:open": "cypress open",
