Only ignoring this file on the root, to indicate it should be moved (when people notice it is automatically moved to the cypress folder, if they have the file after these changes)

--- a/.gitignore
+++ b/.gitignore
@@ -390,4 +390,4 @@ src/Altinn.Apps/AppTemplates/AspNet/App/Properties/launchSettings.json
 !/.yarn/versions
 
 # Cypress environment settings
-cypress.env.json
+/cypress.env.json
