--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,9 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
-      "src/*": ["src/*"],
-      "__mocks__/*": ["src/__mocks__/*"],
-      "testUtils": ["src/testUtils.tsx"]
+      "src/*": ["src/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["node_modules", "cypress"],
+  "exclude": ["node_modules", "cypress"]
 }
