--- a/.gitignore
+++ b/.gitignore
@@ -391,3 +391,4 @@ src/Altinn.Apps/AppTemplates/AspNet/App/Properties/launchSettings.json
 
 # Cypress environment settings
 /cypress.env.json
+/.env
