--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "outDir": "compiled",
     "module": "commonjs",
     "target": "es6",
     "downlevelIteration": true,
@@ -17,10 +16,12 @@
     "noUnusedLocals": true,
     "esModuleInterop": true,
     "baseUrl": ".",
+    "forceConsistentCasingInFileNames": true,
     "paths": {
-      "src/*": ["src/*"]
+      "src/*": ["src/*"],
+      "test/*": ["test/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["node_modules", "cypress"]
+  "exclude": ["node_modules/cypress"]
 }
