Using eslint instead of prettier for json files, thus making sure ignore patterns in .eslintrc.json will be respected for shared tests

--- a/package.json
+++ b/package.json
@@ -154,7 +154,8 @@
       ".husky/pre-commit-check-for-skipped-tests",
       "eslint --cache --fix"
     ],
-    "*.{css,md,json}": "prettier --write"
+    "*.{json}": "eslint --cache --fix",
+    "*.{css,md}": "prettier --write"
   },
   "jest": {
     "transform": {
