--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -6,12 +6,14 @@ on:
     paths:
       - 'src/**'
       - 'test/**'
+      - 'yarn.lock'
       - '.github/workflows/cypress.yml'
   pull_request:
     branches: [main]
     paths:
       - 'src/**'
       - 'test/**'
+      - 'yarn.lock'
       - '.github/workflows/cypress.yml'
 
   workflow_dispatch:
