--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -1,4 +1,4 @@
-name: Add new issues to Team-Apps project
+name: Add new issues to Team Apps project
 
 on:
   issues:
@@ -7,10 +7,10 @@ on:
 
 jobs:
   add-to-project:
-    name: Add issue to Team-Apps project
+    name: Add issue to Team Apps project
     runs-on: ubuntu-latest
     steps:
       - uses: actions/add-to-project@main
         with:
           project-url: https://github.com/orgs/Altinn/projects/39
-          github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
+          github-token: ${{ secrets.ASSIGN_PROJECT_TOKEN }}
