update release.sh to implement sync logic for azure

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,34 +39,28 @@ jobs:
       - name: Run release script
         working-directory: app-frontend
         if: "!github.event.release.prerelease"
-        run: bash .github/scripts/release.sh --frontend . --cdn ../cdn --commit
+        run: |
+          bash .github/scripts/release.sh
+           --frontend . \
+           --cdn ../cdn \
+           --commit \
+           --azure-sync-cdn \
+           --azure-sa-name "${{ secrets.STAGING_STORAGEACCOUNT_NAME }}" \
+           --azure-sa-token "${{ secrets.STAGING_ALTINN_CDN_SAS_TOKEN }}"
 
       - name: Run release script (pre-release)
         working-directory: app-frontend
         if: "github.event.release.prerelease"
-        run: bash .github/scripts/release.sh --frontend . --cdn ../cdn --commit --pre-release
+        run: | 
+         bash .github/scripts/release.sh \
+           --frontend . \
+           --cdn ../cdn \
+           --commit \
+           --pre-release \
+           --azure-sync-cdn \
+           --azure-sa-name "${{ secrets.STAGING_STORAGEACCOUNT_NAME }}" \
+           --azure-sa-token "${{ secrets.STAGING_ALTINN_CDN_SAS_TOKEN }}"
 
       - name: Push to CDN
         working-directory: cdn
         run: git push
-
-      - name: Deploy files to azure CDN (staging)
-        uses: azure/CLI@v1
-        if: "!github.event.release.prerelease"
-        with:
-          azcliversion: 2.44.1
-          inlineScript: |
-            cd cdn
-            az storage copy -s toolkits -d https://${{ secrets.STAGING_STORAGEACCOUNT_NAME }}.blob.core.windows.net/app-frontend${{ secrets.STAGING_ALTINN_CDN_SAS_TOKEN }} --recursive
-            cd schemas/json
-            az storage copy -s layout/ -d https://${{ secrets.STAGING_STORAGEACCOUNT_NAME }}.blob.core.windows.net/app-frontend${{ secrets.STAGING_ALTINN_CDN_SAS_TOKEN }} --recursive
-            az storage copy -s component/ -d https://${{ secrets.STAGING_STORAGEACCOUNT_NAME }}.blob.core.windows.net/app-frontend${{ secrets.STAGING_ALTINN_CDN_SAS_TOKEN }} --recursive
-
-      - name: Deploy files to azure CDN (staging) (prerelease)
-        uses: azure/CLI@v1
-        if: "github.event.release.prerelease"
-        with:
-          azcliversion: 2.44.1
-          inlineScript: |
-            cd cdn
-            az storage copy -s toolkits -d https://${{ secrets.STAGING_STORAGEACCOUNT_NAME }}.blob.core.windows.net/app-frontend${{ secrets.STAGING_ALTINN_CDN_SAS_TOKEN }} --recursive
