--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -66,16 +66,15 @@ jobs:
           export CYPRESS_PROJECT_ID=y2jhp6\n
           export CYPRESS_RECORD_KEY=${{ secrets.CYPRESS_RECORD_KEY }}\n
           export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}\n
-          ./node_modules/.bin/start-server-and-test
-            'yarn start --no-hot'
-            http://localhost:8080/altinn-app-frontend.js
-            'yarn run cy:test:all:headless
-              --env environment=tt02,testUserName=tt02testuser,testUserPwd=${{ secrets.CYPRESS_ALTINN_USERPWD }}
-              --record
-              --parallel
-              --tag \"altinn-app-frontend\"
-              --group altinn-app-frontend
-              --ci-build-id $GITHUB_RUN_ID-$GITHUB_RUN_ATTEMPT'
+          yarn run build\n
+          bash -c 'cd dist/; npx http-server -p 8080 --cors &'\n
+          bash -c 'yarn run cy:test:all:headless
+            --env environment=tt02,testUserName=tt02testuser,testUserPwd=${{ secrets.CYPRESS_ALTINN_USERPWD }}
+            --record
+            --parallel
+            --tag \"altinn-app-frontend\"
+            --group altinn-app-frontend
+            --ci-build-id $GITHUB_RUN_ID-$GITHUB_RUN_ATTEMPT'
         "
 
       - uses: actions/upload-artifact@v3
@@ -123,10 +122,9 @@ jobs:
       - name: Verify cypress and run tests
         run: "
           yarn run cy:verify\n
-          ./node_modules/.bin/start-server-and-test
-            'yarn start --no-hot'
-            http://localhost:8080/altinn-app-frontend.js
-            'yarn run cy:test:all:headless
+          yarn run build\n
+          bash -c 'cd dist/; npx http-server -p 8080 --cors &'\n
+          bash -c 'yarn run cy:test:all:headless
               --config watchForFileChanges=false
               --env environment=tt02,testUserName=testuserexternal,testUserPwd=r@h74Rz7XYQJ'
         "
