--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "fork-ts-checker-notifier-webpack-plugin": "6.0.0",
     "fork-ts-checker-webpack-plugin": "7.3.0",
     "html-react-parser": "3.0.9",
+    "http-server": "^14.1.1",
     "husky": "8.0.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "29.4.2",
@@ -106,7 +107,6 @@
     "resize-observer-polyfill": "1.5.1",
     "rimraf": "4.1.2",
     "source-map-loader": "4.0.1",
-    "start-server-and-test": "1.15.3",
     "style-loader": "3.3.1",
     "terser-webpack-plugin": "5.3.6",
     "ts-jest": "29.0.5",
