--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -56,9 +56,10 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install dependencies
-        env:
-          GITHUB_PACKAGES_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: yarn --immutable
+
+      - name: Build
+        run: yarn build
 
       - name: Verify cypress and run tests
         run: "
@@ -66,8 +67,7 @@ jobs:
           export CYPRESS_PROJECT_ID=y2jhp6\n
           export CYPRESS_RECORD_KEY=${{ secrets.CYPRESS_RECORD_KEY }}\n
           export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}\n
-          yarn run build\n
-          bash -c 'cd dist/; npx http-server -p 8080 --cors &'\n
+          bash -c 'cd dist/; npx http-server -p 8080 --cors >/dev/null &'\n
           bash -c 'yarn run cy:test:all:headless
             --env environment=tt02,testUserName=tt02testuser,testUserPwd=${{ secrets.CYPRESS_ALTINN_USERPWD }}
             --record
@@ -115,15 +115,15 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install dependencies
-        env:
-          GITHUB_PACKAGES_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: yarn --immutable
+
+      - name: Build
+        run: yarn build
 
       - name: Verify cypress and run tests
         run: "
           yarn run cy:verify\n
-          yarn run build\n
-          bash -c 'cd dist/; npx http-server -p 8080 --cors &'\n
+          bash -c 'cd dist/; npx http-server -p 8080 --cors >/dev/null &'\n
           bash -c 'yarn run cy:test:all:headless
               --config watchForFileChanges=false
               --env environment=tt02,testUserName=testuserexternal,testUserPwd=r@h74Rz7XYQJ'
