--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -157,7 +157,57 @@ jobs:
       # TODO: Cache code coverage
 
   unit-tests:
-    name: Type-checks, eslint, unit tests
+    name: Unit tests
+    runs-on: ubuntu-latest
+    needs: [ dependencies ]
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+
+      - name: install node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - uses: actions/cache/restore@v3
+        with:
+          fail-on-cache-miss: true
+          path: |
+            node_modules
+            /home/runner/.cache/Cypress
+          key: node-modules-${{ github.run_id }}
+
+      - name: run tests
+        run: yarn test --coverage --runInBand
+
+      # TODO: Cache code coverage
+
+  linting:
+    name: Linting
+    runs-on: ubuntu-latest
+    needs: [ dependencies ]
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+
+      - name: install node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - uses: actions/cache/restore@v3
+        with:
+          fail-on-cache-miss: true
+          path: |
+            node_modules
+            /home/runner/.cache/Cypress
+          key: node-modules-${{ github.run_id }}
+
+      - name: run eslint
+        run: yarn lint
+
+  type-checks:
+    name: Type-checks
     runs-on: ubuntu-latest
     needs: [ dependencies ]
     steps:
@@ -179,14 +229,6 @@ jobs:
 
       - name: type-check
         run: yarn tsc
-
-      - name: run eslint
-        run: yarn lint
-
-      - name: run tests
-        run: yarn test --coverage --runInBand
-
-      # TODO: Cache code coverage
 
   sonar-cloud:
     name: SonarCloud
